# adapter

./: .gitignore  CHANGELOG.md  README.md  foundry.toml
deployments/: 2026-05-16-delegate-xyz-safe-tx-base.json  2026-05-16-delegate-xyz-safe-tx-mainnet.json  2026-05-16-delegate-xyz-safe-tx-sepolia.json  2026-05-20-bindexisting-counterfactual-v1-safe-tx-base.json  2026-05-20-bindexisting-counterfactual-v1-safe-tx-mainnet.json  2026-05-20-bindexisting-counterfactual-v1-safe-tx-sepolia.json
docs/proposals/: bind-existing.md  counterfactual-register-with-sig.md
script/: ComputeVanityInputs.s.sol  DeployAdapterImplementation.s.sol  DeployVanityProxy.s.sol
src/: Adapter8004.sol
src/interfaces/: IERC8004AdapterCounterfactual.sol  IERC8004AdapterRegistration.sol  IERCAgentBindings.sol
test/: Adapter8004.delegate.t.sol  Adapter8004.interfaces.t.sol  Adapter8004.t.sol  DeployAdapterImplementation.t.sol
test/mocks/: MockERC1155F.sol  MockERC6909F.sol
test/security/: Adapter8004.counterfactual-with-sig.t.sol  Adapter8004.counterfactual.t.sol
tools/vanity/: Cargo.toml
tools/vanity/src/: main.rs
